Fixed the background covering page elements; starting to add the custom themes

--- a/public/css/background.css
+++ b/public/css/background.css
@@ -14,6 +14,7 @@ html {
   
   #what-im-doing::before, #what-im-doing::after,
   #dont-know::before, #dont-know::after {
+    z-index: -10;
     position: fixed;
     top: 50%;
     left: 50%;
